fix(ops): remove hardcoded -XX:+UseZGC in all Dockerfiles entrypoints to prevent GC conflict